--- a/paper-gd/hexagraph.tex
+++ b/paper-gd/hexagraph.tex
@@ -1,12 +1,9 @@
-% This is LLNCS.DEM the demonstration file of
-% the LaTeX macro package from Springer-Verlag
-% for Lecture Notes in Computer Science,
-% version 2.4 for LaTeX2e as of 16. April 2010
-%
 \documentclass{llncs}
 %
 \usepackage{makeidx}  % allows for indexgeneration
+\usepackage{algorithm}
 \usepackage[noend]{algpseudocode}
+\usepackage{graphicx}
 %
 \begin{document}
 %
@@ -38,6 +35,13 @@ There will be two blank lines before and after the Abstract. \dots
 %-----------------------------------------------------------------------
 \section{Introduction}
 
+\begin{problem}\label{prob:1}
+%
+Given a graph $G = (V,E)$ and a tiling $\mathcal{T} = (C, F)$, find a function $f : V \mapsto C$ such that as many edges in $E$ are mapped to adjacent tiles in $F$. In other words, find $f$ to maximize $\left|\left\{\{f(u),f(v)\} \in F : \{u,v\} \in E\right\}\right|$.
+%
+\end{problem}
+
+This paper is not a theoretical paper in the sense that we give no bounds or guarantees. Instead a number of algorithmic ideas are combined to produce a practical heuristic for laying out graphs using the tiling scheme described above.
 
 %-----------------------------------------------------------------------
 \section{Layout Algorithms}
@@ -49,20 +53,25 @@ tiles}
 
 \paragraph{Iterative linear assignment.}
 
+To find an assignment that satisfies as many edges as possible, we introduce an EM-like, randomized procedure that iteratively improves an initial assignment. This procedure, shown in Algorithm~\ref{alg:ilap}, computes the benefit of moving each node $u$ to each cell assuming that all other nodes are fixed in their current assignment. This results in a weighted, bipartite graph relating nodes to cells, and a maximum weight matching is found in this graph to choose a new assignment based on these weights. More detail of the various steps is given in the sections below.
+
+
+\begin{algorithm}
 \begin{algorithmic}[1]
 \State $\sigma_t \gets 1/200$
 \State $f'' \gets \Call{InitialAssignment}{G,T}$
 \Repeat
     \State $f \gets f''$
-    \State $M_G(f,\sigma_t) \gets \Call{CreateMatchGraph}{f,\sigma_t}$
-    \State $f' \gets \Call{MaximumWeightMatching}{M_G(f,\sigma_t)}$
-    \State $f'' \gets \Call{PlaceUnplacedNodes}{f'}$
+    \State $M_G(f,\sigma_t) \gets \Call{CreateMatchGraph}{f,\sigma_t}$\label{a:matchgraph}
+    \State $f' \gets \Call{MaximumWeightMatching}{M_G(f,\sigma_t)}$\label{a:maxmatch}
+    \State $f'' \gets \Call{PlaceUnplacedNodes}{f'}$\label{a:unplaced}
     \State $\sigma_t \gets \sigma_t + 1 / 200$
 \Until{$f'' = f$} 
+\State \Call{RouteUnsatisfiedEdges}{f}
 \end{algorithmic}
-
-
-\paragraph{Choice of initial assignment.}
+\caption{Iterative, randomized linear assignment heuristic to solve Problem~\ref{prob:1}.}
+\label{alg:ilap}
+\end{algorithm}
 
 \paragraph{Constructing a matching graph.}
 
@@ -128,7 +137,7 @@ preventing the inertia node from being assigned anyplace.
 
 To overcome this, we run a second matching just for the nodes that were
 unmatched during the first round.  In this second matching, we create a new
-there are edges $(u,c)$ between a node $u$ and any cell $c$ that is not blocked
+there are edges $(u,c)$ between a node $u$ and any cell $c$ that is not occupied or blocked
 for $u$ when fixing the assignments from the first matching. All the edge
 weights are $1$. Because the tiling field is chosen to be large enough, the
 maximum matching in this second graph will always include an assignment of
@@ -149,9 +158,23 @@ every node to some cell.
 
 \subsection{Relaxing the requirement that adjacent tiles encode edges}
 
-\subsection{Routing non-satisfied edges}
+\subsection{Routing non-satisfied edges} 
+
+\begin{figure}
+\centering
+\includegraphics[width=0.5\textwidth]{hexagon_graph}
+\caption{Subgraph created for routing edges for each tile.}
+\label{fig:routeg}
+\end{figure}
+
+We must draw a curve connecting $f(u)$ with $f(v)$ for any edge $\{u,v\}$ that $f$ does not map to adjacent cells. To do this, we create a graph $R$ by repeating the $K_6$ subgraph shown in Figure~\ref{fig:routeg} for every tile. The nodes of each $K_6$ are identified with the edges of the hexagon tile, and adjacent tiles share nodes. Edges in $R$ that are within tiles to which some vertex in $G$ has been assigned are given weight $10$, while those in unassigned tiles are given weight $1$. Although these weights are somewhat arbitrary, the $10$ is chosen sufficiently bigger than the circumference of a tile so that routing around a tile is preferred over routing through one.
+
+For every unsatisfied edge $\{u,v\}$, we find the shortest path in $R$ that 
+connects a vertex in cell $f(u)$ to a vertex in cell $f(v)$. The edge $\{u,v\}$ is then drawn by interpolating a curve along this shortest path.
 
 \subsection{Coloring non-satisfied edges}
+
+The above procedure often draws a number of routes using the same edge of $R$. To visually distinguish such routes, we assign colors to routes so that if two routes share an edge of $R$ they are assigned different colors. To do this, we create a coloring graph $L = (V_L, E_L)$ where the vertices of  $L$ are the routes (corresponding to unsatisfied edges of $G$), and two routes are connected by an edge in $E_L$ if they use at least one of the same edges of $R$. We then use a simple greedy approximation~\cite{greedycoloring} to find the  coloring of $L$ that uses the fewest colors.
 
 %-----------------------------------------------------------------------
 \section{Results}
@@ -163,6 +186,18 @@ every node to some cell.
 \subsection{Quality of layout for near-planar graphs}
 
 \subsection{Example tiled layouts}
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{tree50}
+\caption{A tree with 50 nodes.}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{flor15}
+\caption{The Florentine families graph, from Ronald L. Breiger and Philippa E. Pattison Cumulated social roles: The duality of persons and their algebras,1 Social Networks, Volume 8, Issue 3, September 1986, Pages 215-256}
+\end{figure}
 
 %-----------------------------------------------------------------------
 \section{Conclusion}
