--- a/paper-gd/hexagraph.tex
+++ b/paper-gd/hexagraph.tex
@@ -197,7 +197,20 @@ The hexagonal tiling layout can produce very readable and attractive drawings, a
 \begin{figure}[t]
 \centering
 \includegraphics[width=0.8\textwidth]{flor15}
-\caption{The Florentine families graph, from Ronald L. Breiger and Philippa E. Pattison Cumulated social roles: The duality of persons and their algebras,1 Social Networks, Volume 8, Issue 3, September 1986, Pages 215-256}\label{fig:florentine}
+\caption{The Florentine families graph ($n=XXX$, $m=XXX$), from Ronald L. Breiger and Philippa E. Pattison Cumulated social roles: The duality of persons and their algebras,1 Social Networks, Volume 8, Issue 3, September 1986, Pages 215-256}\label{fig:florentine}
+\end{figure}
+
+\begin{figure}[t]
+\centering
+\includegraphics[width=0.9\textwidth]{circuit7}
+\caption{Circuit graph ($n=XXX$, $m=XXX$) from the 20XXX graph drawing contest.}
+\label{fig:circuit}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.5\textwidth]{circuit7-neato}
+\caption{Circuit graph of Figure~\ref{fig:circuit} drawn using neato~\cite{neato}.}
 \end{figure}
 
 \subsection{Quality metrics on several graphs}
