near final version

--- a/paper-gd/hexagraph.bib
+++ b/paper-gd/hexagraph.bib
@@ -1,3 +1,62 @@
+@article{spin,
+author = {Tsafrir, D. and Tsafrir, I. and Ein-Dor, L. and Zuk, O. and Notterman, D.A. and Domany, E.}, 
+title = {Sorting points into neighborhoods {(SPIN)}: data analysis and visualization by ordering distance matrices},
+volume = {21}, 
+number = {10}, 
+pages = {2301-2308}, 
+year = {2005}, 
+journal = {Bioinformatics} 
+}
+
+@article{hungarian,
+author = {Harold W. Kuhn}, 
+title = {The {Hungarian} Method for the assignment problem}, 
+journal = {Naval Research Logistics Quarterly}, 
+volume = 2,
+pages = {83--97}, 
+year = 1955
+}
+
+@article{greedycoloring,
+author = {Welsh, D. J. A. and Powell, M. B.},
+year =  1967, 
+title = {An upper bound for the chromatic number of a graph and its application to timetabling problems}, 
+journal = {The Computer Journal},
+volume = 10,
+number = 1,
+pages = {85--86}
+}
+
+@article{lieberman,
+author = {Erez Lieberman-Aiden and others},
+title = {Comprehensive mapping of long-range interactions reveals folding principles of the human genome},
+journal = {Science},
+volume = 326,
+number = 5950,
+pages = {289--293},
+year = 2009
+}
+
+@article{dolphin,
+author = {D. Lusseau and K. Schneider and O. J. Boisseau and P. Haase and E. Slooten and
+  S. M. Dawson}, 
+title = {The bottlenose dolphin community of {Doubtful Sound} features
+  a large proportion of long-lasting associations}, 
+journal = {Behavioral Ecology and Sociobiology},
+volume = 54, 
+pages = {396--405},
+year = 200
+}
+
+@article{karate,
+author = {W. W. Zachary}, 
+title = {An information flow model for conflict and fission in small groups}, 
+journal = {Journal of Anthropological Research},
+volume =  33, 
+pages = {452--473},
+year =  1977
+}
+
 @inproceedings{networkx,
 author = {Aric A. Hagberg and Daniel A. Schult and Pieter J. Swart}, 
 title = {Exploring network structure, dynamics, and function using {NetworkX}}, 
@@ -6,6 +65,15 @@ editor = {G\"ael Varoquaux and Travis Vaught and Jarrod Millman},
 address = {Pasadena, CA USA}, 
 pages = {11--15}, 
 year = 2008
+}
+
+@article{crossing,
+author ={M. R. Garey and D. S. Johnson},
+title = {Crossing number is {NP}-complete},
+journal ={Journal on Algebraic and Discrete Methods}, 
+volume = 4,
+pages = {312--316}, 
+year = 1983
 }
 
 @article{Flor,
@@ -39,9 +107,53 @@ pages = {215--256}
     url = {http://igraph.sf.net},
   }
 
+@article{bundling,
+title = {Hierarchical Edge Bundles: Visualization of Adjacency Relations in Hierarchical Data},
+author = {Danny Holten},
+journal = {IEEE T Vis.\@ Comput.\@ Graphics}, 
+volume = 12, 
+number = 5, 
+year = 2006
+}
+
 @misc{gdcontest,
 title = {Graph Drawing Contest 2011},
 key = {Graph Drawing Contest},
 note = {http://graphdrawing.de/contesthistory.html}
 }
 
+@inproceedings{circles,
+booktitle = {Graph Drawing: Lecture Notes in Computer Science Volume 7704}, 
+year = 2013, 
+pages = {138--149},
+title = {Circle-Representations of Simple 4-Regular Planar Graphs},
+author = {Michael A. Bekos, Chrysanthi N. Raftopoulou}
+}
+
+@article{TT86,
+  title={A unified approach to visibility representations of planar graphs},
+  author={Tamassia, Roberto and Tollis, Ioannis G},
+  journal={Discrete \& Computational Geometry},
+  volume={1},
+  number={1},
+  pages={321--341},
+  year={1986},
+  publisher={Springer}
+}
+
+@inproceedings{vis96,
+  title={On a visibility representation of graphs},
+  author={Cobos, F Javier and Dana, J Carlos and Hurtado, Ferr{\'a}n and M{\'a}rquez, Alberto and Mateos, Felipe},
+  booktitle={Graph Drawing},
+  pages={152--161},
+  year={1996},
+  organization={Springer}
+}
+
+@inproceedings{TT89b,
+  title={Tessellation representations of planar graphs},
+  author={Tamassia, Roberto and Tollis, Ioannis G},
+  booktitle={Proc. 27th Annual Allerton Conf},
+  volume={43},
+  year={1989}
+}
