--- a/paper-gd/hexagraph.tex
+++ b/paper-gd/hexagraph.tex
@@ -501,7 +501,7 @@ graph usually remains very readable.
 randomized runs. The number of nodes $n$ and number of edges $m$ are given.
 \textbf{\# Satisfied} gives the edges that were satisfied by tile adjacencies.
 \textbf{\# Colors} shows the number of colors required to color the routes.
-\textbf{Area} gives the of the drawing in terms of number of tiles.
+\textbf{Area} gives the area of the drawing in terms of number of tiles.
 \textbf{Node-Edge Crossings} are the number of times a non-satisfied edge
 crosses the face of some node. \textbf{Route Lengths} gives the total length of
 the routing of the unsatisfied edges (as the number of edges of $R$ that they
